# src/swagger/schemas.ts
@@ -181,4 +181,153 @@ export {};
  *          description: new avatar string or empty string if no avatar avaliable
  *      example:
  *        avatarUrl: /files/some_avatar.png
+ *
+ *
+ *    SuccessfulReqMsg:
+ *      type: object
+ *      description: this type is the type of response you can try in then() in components try/catch block
+ *      required:
+ *        - message
+ *      properties:
+ *        message:
+ *          type: string
+ *          description: message you can dispaly on front application
+ *      example:
+ *        message: resource was created successfuly
+ *
+ *    FailedReqMsg:
+ *      type: object
+ *      description: this type is the type of error you can catch in catch() in redux-toolkit createAsyncThunk
+ *      required:
+ *        - message
+ *      properties:
+ *        message:
+ *          type: string
+ *          description: response message
+ *        error:
+ *          type: any
+ *          description: response error
+ *      example:
+ *        message: An error occured when trying to register new resource
+ *        error: error object.
+ *
+ *
+ *    RequestScenery:
+ *      type: object
+ *      description: type of request data passed in request when creating new scenery or update basic scenery data
+ *      required:
+ *        - title
+ *        - description
+ *      properties:
+ *        title:
+ *          type: string
+ *          description: scenery title
+ *        description:
+ *          type: string
+ *          description: scenery description
+ *      example:
+ *        title: mansion
+ *        description: main character mansion
+ *
+ *
+ *    SceneryImage:
+ *      type: object
+ *      description: single scenery image
+ *      required:
+ *        - originalName
+ *        - url
+ *        - filename
+ *        - _id
+ *      properties:
+ *        originalName:
+ *          type: string
+ *          description: the original name before being sent to server
+ *        url:
+ *          type: string
+ *          description: url to get scenery image
+ *        filename:
+ *          type: string
+ *          description: name of the resource under which you can find it on server
+ *        _id:
+ *          type: string
+ *          description: resource id
+ *      example:
+ *        originalName: in-flames_owl_boy.png
+ *        url: /files/1635858781056-in-flames_owl_boy.png
+ *        filename: 1635858781056-in-flames_owl_boy.png
+ *        _id: 6181395d67568b70180ce91b
+ *
+ *    Scenery:
+ *      type: object
+ *      description: single scenery
+ *      required:
+ *        - _id
+ *        - title
+ *        - description
+ *        - imagesList
+ *        - __v
+ *        - createdAt
+ *        - updatedAt
+ *      properties:
+ *        _id:
+ *          type: string
+ *          description: mongodb id
+ *        title:
+ *          type: string
+ *          description: scenery title
+ *        description:
+ *          type: string
+ *          description: scenery description
+ *        imagesList:
+ *          type: array
+ *          items:
+ *            $ref: '#/components/schemas/SceneryImage'
+ *          description: array of scenery images
+ *        __v:
+ *          type: number
+ *          description: mongodb __v
+ *        createdAt:
+ *          type: string
+ *          description: create timestamp
+ *        updatedAt:
+ *          type: string
+ *          description: update timestamp
+ *      example:
+ *        _id: 6181395d67568b70180ce93b
+ *        title: mansion
+ *        description: main character mansion
+ *        imagesList: []
+ *        __v: 0
+ *        createdAt: 2021-11-04T11:01:42.143+00:00
+ *        updatedAt: 2021-11-04T11:01:42.143+00:00
+ *
+ *
+ *    SingleSceneryResponse:
+ *      type: object
+ *      description: response with scenery data in `data` key
+ *      required:
+ *        - data
+ *      properties:
+ *        data:
+ *          type: object
+ *          description: scenery
+ *          $ref: '#/components/schemas/Scenery'
+ *
+ *    SceneriesResponse:
+ *      type: object
+ *      description: returns list of sceneries (if no filters specified, returns first 5 sceneries)
+ *      required:
+ *        - data
+ *        - totalItems
+ *      properties:
+ *        data:
+ *          type: array
+ *          items:
+ *            $ref: '#/components/schemas/Scenery'
+ *          description: list of sceneries
+ *        totalItems:
+ *          type: number
+ *          description: number of total sceneries
+ *
+ *
  */
